--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
@@ -27,6 +28,7 @@
     "styled-components": "^6.1.8",
     "ts-jest": "^29.1.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
